--- a/Control_Empleados.csproj
+++ b/Control_Empleados.csproj
@@ -132,6 +132,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\AsistenteDeInstalación\InstalacionBD.resx">
       <DependentUpon>InstalacionBD.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\AsistenteDeInstalación\UsuarioPrincipal.resx">
       <DependentUpon>UsuarioPrincipal.cs</DependentUpon>
