--- a/Control_Empleados.csproj
+++ b/Control_Empleados.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Datos\Conexion.cs" />
     <Compile Include="Datos\DAsistencia.cs" />
     <Compile Include="Datos\DCargos.cs" />
+    <Compile Include="Datos\DCopiasDeSeguridad.cs" />
     <Compile Include="Datos\DModulos.cs" />
     <Compile Include="Datos\DPermisos.cs" />
     <Compile Include="Datos\DPersonal.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="Logica\LAsistencia.cs" />
     <Compile Include="Logica\Dimensiones.cs" />
     <Compile Include="Logica\LCargos.cs" />
+    <Compile Include="Logica\LCopiasDeSeguridad.cs" />
     <Compile Include="Logica\LModulo.cs" />
     <Compile Include="Logica\LPermisos.cs" />
     <Compile Include="Logica\LPersonal.cs" />
@@ -97,6 +99,12 @@
     </Compile>
     <Compile Include="Presentacion\AsistenteDeInstalación\UsuarioPrincipal.Designer.cs">
       <DependentUpon>UsuarioPrincipal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\CopiasDeSeguridad.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Presentacion\CopiasDeSeguridad.Designer.cs">
+      <DependentUpon>CopiasDeSeguridad.cs</DependentUpon>
     </Compile>
     <Compile Include="Presentacion\Login.cs">
       <SubType>Form</SubType>
@@ -160,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\ControlUsuarios.resx">
       <DependentUpon>ControlUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\CopiasDeSeguridad.resx">
+      <DependentUpon>CopiasDeSeguridad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
